--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             loadingDiv.innerHTML = `
                 <div class="message-avatar">AI</div>
                 <div class="loading">
-                    <span>🤔 Analyserar lagtext...</span>
+                    <span>🤔 Analyserar underlag...</span>
                     <div class="loading-dots">
                         <span></span>
                         <span></span>
