--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             loadingDiv.innerHTML = `
                 <div class="message-avatar">AI</div>
                 <div class="loading">
-                    <span>🤔 Analyserar lagtext...</span>
+                    <span>🤔 genererar ett svar...</span>
                     <div class="loading-dots">
                         <span></span>
                         <span></span>
