--- a/new.html
+++ b/new.html
@@ -7,6 +7,38 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
+        /* Förbättra listor i chattmeddelanden */
+.message-content ul {
+    margin: 12px 0;
+    padding-left: 20px;
+    list-style-type: disc;
+}
+
+.message-content ul li {
+    margin: 6px 0;
+    line-height: 1.6;
+}
+
+.message-content ol {
+    margin: 12px 0;
+    padding-left: 20px;
+}
+
+.message-content ol li {
+    margin: 6px 0;
+    line-height: 1.6;
+}
+
+.message-content strong {
+    color: #362E7D;
+    font-weight: 600;
+}
+
+/* Luftigare stycken */
+.message-content p {
+    margin: 10px 0;
+}
+        
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #5863C7 0%, #362E7D 100%);
