--- a/newb.html
+++ b/newb.html
@@ -470,39 +470,7 @@
         }
     </style>
 </head>
-<body>
-    <!-- HEADER OCH SIDEBAR (detta saknades!) -->
-    <nav class="global-header">
-        <div class="logo-section">
-            <img src="https://karlskoga.se/images/18.17cf90041722ce1749b5e/1640015633047/Karlskoga_liggande.png" alt="Karlskoga kommun" class="logo">
-            <a href="https://andersasplundberggren.github.io/ledarportalen/" class="logo-text">Ledarportalen</a>
-        </div>
-        <button class="menu-toggle" onclick="toggleSidebar()">
-            <span>☰</span>
-            <span>Meny</span>
-        </button>
-    </nav>
 
-    <div class="sidebar-overlay" id="sidebarOverlay" onclick="toggleSidebar()"></div>
-    
-    <aside class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h3>Ledarportalen</h3>
-            <button class="close-btn" onclick="toggleSidebar()">✕</button>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/"><span>🏠</span><span>Hem</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/chat.html"><span>💬</span><span>AI Chatt</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/arshjul.html"><span>📅</span><span>Årshjul</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/samtal.html"><span>👥</span><span>Medarbetarsamtal</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/forbered.html"><span>📋</span><span>Förbered samtal</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/kompetens.html"><span>🎓</span><span>Kompetens</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/recruitment.html"><span>🔍</span><span>Rekrytering</span></a></li>
-                <li><a href="https://andersasplundberggren.github.io/ledarportalen/kommunikation.html"><span>📢</span><span>Kommunikation</span></a></li>
-            </ul>
-        </nav>
-    </aside>
     <!-- SLUT PÅ HEADER OCH SIDEBAR -->
 
     <div class="container">
@@ -529,7 +497,7 @@
                     • Organisation och ansvar<br>
                     • Handläggningsprocesser<br>
                     • Vanliga frågor och exempel<br><br>
-                    <strong>⚠️ Skydda personuppgifter:</strong> Använd <em>aldrig</em> riktiga namn, personnummer eller andra identifierande uppgifter. Formulera dina frågor generellt.<br><br>
+                    <strong>⚠️ Skydda personuppgifter:</strong> Använd <em>aldrig</em> namn, personnummer eller andra identifierande uppgifter. Formulera dina frågor generellt.<br><br>
                     <em>Exempel:</em> "Vilka regler gäller för biståndsbedömning?" istället för "Kan Anna Andersson få bistånd?"<br><br>
                     Vad vill du veta?
                 </div>
@@ -758,7 +726,7 @@
             loadingDiv.innerHTML = `
                 <div class="message-avatar">AI</div>
                 <div class="loading">
-                    <span>🤔 Analyserar källor...</span>
+                    <span>🤔 genererar svar...</span>
                     <div class="loading-dots">
                         <span></span>
                         <span></span>
