--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
         <div class="header">
             <h1>💬 Chatta med socialtjänsten</h1>
             <p class="warning">
-                📅 Baserad på <strong>nya Socialtjänstlagen (2025)</strong> <br>
-                🚫 <strong>VIKTIGT:</strong> Skriv ALDRIG in personuppgifter i denna chatt! Inga personnummer, namn, adresser, telefon eller e-post.<br>
+                📅 Baserad på <strong>nya Socialtjänstlagen (2025)</strong> som gäller från juli 2025<br>
+                🚫 <strong>VIKTIGT:</strong> Skriv ALDRIG personuppgifter! Inga personnummer, namn, adresser, telefon eller e-post.<br>
                 Chatten blockerar automatiskt meddelanden med personuppgifter.
             </p>
             <div class="sources-status" id="sourcesStatus">
@@ -492,7 +492,7 @@
                 <div class="message-content">
                     Hej! Jag är din AI-assistent för <strong>Karlskoga kommuns socialtjänst</strong>.<br><br>
                     📚 Jag kan hjälpa dig med frågor om:<br>
-                    • <strong>Nya Socialtjänstlagen (2025)</strong><br>
+                    • <strong>Nya Socialtjänstlagen (2025)</strong> - gäller från juli 2025<br>
                     • Kommunens rutiner och riktlinjer<br>
                     • Organisation och ansvar<br>
                     • Handläggningsprocesser<br>
